<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password </string>/>
    <string name="secret">secret</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="profile_picture_url">Profile Picture URL</string>
    <string name="your_age">Your age</string>
    <string name="api">api</string>
    <string name="your_profile">Profile</string>
    <string name="your_posts">Your Posts</string>
    <string name="home">Home</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="name1">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="save_changes">Save Changes</string>
    <string name="email1">Email</string>
    <string name="plus">+</string>
    <string name="api1">API</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="location">Location</string>
    <string name="choose_time">Choose Time</string>
    <string name="content">Content</string>
    <string name="post">Post</string>
    <string name="profile_image">profile_image</string>
    <string name="select_image">select_image</string>
    <string name="your_phone" />
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="update">Update</string>
    <string name="close_button_text" />
    <string name="participants_title" />
    <string name="participants_icon_description" />
    <string name="Participents">Participants</string>
</resources>